# hexoteamsBackend

./: .dockerignore  .gitignore  DOCKER_SETUP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/core/: __init__.py  celery.py  config.py  email.py  s3.py  supabase.py
app/routers/: __init__.py  deps.py
app/routers/v1/: __init__.py  auth.py  chat.py  file.py  inbox.py  misc.py  organization.py  project.py  task.py  teams.py  time_log.py  websocket.py
app/schemas/activities/: __init__.py  activities.py
app/schemas/attachments/: __init__.py  attachments.py
app/schemas/auth/: __init__.py  auth.py
app/schemas/chat/: __init__.py  conversations.py  messages.py
app/schemas/files/: __init__.py  files.py
app/schemas/inbox/: __init__.py  inbox.py
app/schemas/invitations/: invitations.py
app/schemas/links/: __init__.py  links.py
app/schemas/organizations/: __init__.py  organization.py
app/services/: activity.py  attachment.py  auth.py  chat.py  files.py  inbox.py  invitation.py  link.py  notification.py  oauth.py  organization.py  project.py  task.py  team.py  time_log.py
app/tasks/: __init__.py  tasks.py
app/templates/: direct_message.html  inbox_notification.html  invitation.html  project_addition.html  reset_password.html  signup_confirmation.html  style.css  task_assigned.html  task_completed.html  task_unassigned.html  templates.py
app/utils/: __init__.py  calculator.py  inbox_helpers.py  notification_pubsub.py  notification_subscriber.py  pagination.py  random_items.py  realtime.py  redis_cache.py  websocket_manager.py
(+8 files in other folders)
