[project]
name = "hexoteamsbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.0.0",
    "boto3>=1.42.30",
    "celery[redis]>=5.6.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pillow>=12.1.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "redis>=6.4.0",
    "supabase>=2.27.2",
    "uvicorn>=0.40.0",
]
